   Use up/down icons for Previous/Next Error.
 * src/interface.c, src/keybindings.c, src/callbacks.c,
   src/callbacks.h, src/ui_utils.c, doc/geany.txt, doc/geany.html,
   geany.glade:
   Add Find Usage and Go to Tag items to Search menu for easier
   discovery.
 * tagmanager/tm_symbol.c:
   Fix possible NULL dereference.
 * HACKING:
   Add link to glade-2.12.2.tar.gz on geany.org.


2010-09-09  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/build.c:
   Fix a memory leak. Based on input by Daniel Marjamäki. Thanks for the
   catch.


2010-09-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/ui_utils.h, src/msgwindow.c, src/msgwindow.h, src/main.c:
   Add GeanyMainWidgets::message_window_notebook for plugins to append
   a new notebook page (#3061342).
 * src/document.c:
   Add Close button to the detected file changed dialog.
 * src/interface.c, geany.glade:
   Add separator between Find Previous and Find in Files.
   Add up/down icons for Previous/Next Message.


2010-08-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/snippets.conf:
   Add dummy entry for "do" snippet for Haskell to explicitly avoid the
   default completion.


2010-08-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c:
   Fix broken editing of build menu labels.
 * src/encodings.c, src/filetypes.c, configure.ac:
   Auto-enable building with included regex if no regcomp function is
   found.
   Remove checks for HAVE_REGCOMP in Geany source (not TagManager) -
   regex support is required.
 * tagmanager/make.c:
   Backport fix for possible infinite loop from CTags.
 * scintilla/PlatGTK.cxx:
   Backport list box memory leak fixes from Scintilla 2.20.


2010-08-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/project.c:
   Make the Properties dialog filename a label and put it first (patch
   by Jiří Techet, thanks).
 * src/build.c, src/build.h, src/project.c, doc/geany.txt,
   doc/geany.html: