@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2010-08-24" />
+<meta name="date" content="2010-09-09" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2010-08-24</td></tr>
+<td>2010-09-09</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.20</td></tr>
 </tbody>
@@ -4256,7 +4256,12 @@ match one of the patterns associated with that filetype (see
 <dt>wordchars</dt>
 <dd><p class="first">These characters define word boundaries when making selections
 and searching using word matching options.</p>
-<p class="last"><em>Example:</em> (look at system filetypes.* files)</p>
+<p><em>Example:</em> (look at system filetypes.* files)</p>
+<div class="last note">
+<p class="first admonition-title">Note</p>
+<p class="last">This can be overridden by the <em>whitespace_chars</em>
+filetypes.common setting.</p>
+</div>
 </dd>
 <dt>comment_open</dt>
 <dd><p class="first">A character or string which is used to comment code. If you want to
@@ -6128,7 +6133,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2010-09-09 11:53 UTC.
+Generated on: 2010-09-09 15:36 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
